--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
   "keywords": [],
   "author": "Thien Banh",
   "license": "ISC",
